--- a/src/app/info-card/info-card.component.css
+++ b/src/app/info-card/info-card.component.css
@@ -40,7 +40,9 @@ button:focus {outline:0;}
 }
 .shadow__title {
     font-size: 1em;
+    font-family: 'Lato', sans-serif;
 }
 .shadow__description {
+    font-family: 'Lato', sans-serif;
     font-size: 0.7em;
 }
